<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:id="@+id/group_preference">
	    <item
	        android:id="@+id/menu_preference"
	        android:icon="@drawable/ic_menu_preferences"
	        android:title="@string/menu_settings"
	        android:showAsAction="never"/>
    </group>
    
    <group android:id="@+id/group_refresh">
	    <item
	        android:id="@+id/menu_refresh"
	        android:icon="@drawable/ic_menu_refresh"
	        android:title="@string/menu_refresh"
	        android:showAsAction="always"/>
    </group>
    
    <group android:id="@+id/group_apropos">
	    <item
	        android:id="@+id/menu_apropos"
	        android:icon="@drawable/ic_menu_about"
	        android:title="@string/menu_about"
	        android:showAsAction="never"/>
	</group>

</menu>