<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Copyright 2012 Damien Raude-Morvan, Alvin Berthelot,
 ~                Guillaume Granger and Nicolas Guillot
 ~ 
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~ 
 ~      http://www.apache.org/licenses/LICENSE-2.0
 ~ 
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- http://yenliangl.blogspot.com/2011/04/customize-layout-of-preferenceactivity.html -->

    <TextView
        android:id="@+id/title_config"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_configuration"
        style="?android:attr/listSeparatorTextViewStyle"
        />

    <ListView
        android:id="@+android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <TextView
        android:id="@+id/title_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_data"
        style="?android:attr/listSeparatorTextViewStyle" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="6sp"
        android:layout_marginTop="6sp"
        android:layout_marginBottom="6sp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_data_dynrefresh_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/refresh_dyndata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_data_dynrefresh_summary"
            android:maxLines="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_data_staticrefresh_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/refresh_staticdata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_data_staticrefresh_summary"
            android:maxLines="2" />
    </LinearLayout>

</LinearLayout>